Anpassung auf Java 11, trotzdem NullPointerException