@@ -146,7 +146,7 @@ public class Game implements PropertyChangeListener {
 
 	@SuppressWarnings("unused")
 	private void calculateMissionCards(List<MissionCard> missionCards, Player currentPlayer) {
-		List<List<LocationList>> pairs = Game.subsets(missionCards.stream().map(m -> new LocationList(m.getLocations())).toList());
+		List<List<LocationList>> pairs = Game.subsets(missionCards.stream().map(m -> new LocationList(m.getLocations())).collect(Collectors.toList()));
 		AlgorithmSettings settings = new AlgorithmSettings(currentPlayer);
 		settings.pathSegments = 12;
 		pairs.stream().sorted((o1, o2) -> Integer.compare(o1.size(), o2.size())).forEach(l -> Algorithm.findShortestPath(l, settings));
@@ -248,7 +248,8 @@ public class Game implements PropertyChangeListener {
 		this.currentPlayerCounter = (this.currentPlayerCounter + 1) % this.players.size();
 		this.currentPlayerColorCardDraws = 0;
 		this.fireAction(this, Property.PLAYERCHANGE, oldValue, this.getCurrentPlayer());
-		if (this.getCurrentPlayer() instanceof Computer com) {
+		if (this.getCurrentPlayer() instanceof Computer) {
+			Computer com = (Computer) this.getCurrentPlayer();
 			new Thread(() -> com.nextMove()).start();
 		}
 	}
@@ -312,7 +313,7 @@ public class Game implements PropertyChangeListener {
 			ArrayList<MissionCard> l = new ArrayList<>(t);
 			l.addAll(u);
 			return l;
-		}).get().parallelStream().filter(mission -> mission.getFromLocation().equals(location) || mission.getToLocation().equals(location)).toList();
+		}).get().parallelStream().filter(mission -> mission.getFromLocation().equals(location) || mission.getToLocation().equals(location)).collect(Collectors.toList());
 	}
 
 	@SuppressWarnings("unchecked")
